--- a/apps/web/lib/styles/index.scss
+++ b/apps/web/lib/styles/index.scss
@@ -1,5 +1,5 @@
 @import './tailwind/output.css';
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap');
+@import url('//fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap');
 
 html {
   height: 100vh;
